# HeavyPayloadDrone

./: README.md
Drawings/: 10_HexaD7Base.SLDPRT  10_HexaD7Base_PerpConfig.SLDPRT  10_IntelNUC.SLDPRT  10_NUC7i7BNH.SLDPRT  10_NUC8i7BEK_Assembly.SLDASM  10_NUC8i7BEK_base.IGS  10_NUC8i7BEK_base.SLDPRT  10_NUC8i7BEK_base.STL  10_PowerADDBattery.SLDPRT  10_ProposedBaseUpperAttacher_NE.SLDPRT  10_ProposedBaseUpper_NE.SLDPRT  10_ProposedBaseUpper_NE.STEP  10_ProposedBase_NE.SLDPRT  10_ProposedBase_NE.STEP  10_ProposedBase_Steffen.SLDPRT  10_ProposedBase_SteffenAtt.SLDPRT  11_GPSBase.SLDPRT  11_GPSBaseCap.SLDPRT  12_AxisPTZmount.SLDPRT  12_AxisPTZmountBase.SLDPRT  12_AxisPTZmountBaseFemale.SLDPRT  12_DKP6012_Drok.SLDPRT  12_Drok_MountRing.SLDPRT  12_Drok_MountRing_v2.SLDPRT  12_Drok_Mount_v3.SLDASM  12_Drok_SmallRigMount.SLDPRT  12_Drok_SmallRigMount.STL  12_Drok_mount.SLDPRT  12_Drok_mount_v2.SLDPRT  12_Drok_mount_v2_Mirror.SLDPRT  12_Drok_mount_v2_MirrorF.SLDPRT  12_NUC_Case.SLDPRT  12_NUC_CaseMount.SLDPRT  12_NUC_CaseMount_v2.SLDPRT  12_NUC_CaseMount_v2_mirror.SLDPRT  12_NUC_CaseMount_v2_mirrorF.SLDPRT  12_NUC_Case_v2.SLDPRT  12_NUC_Case_v3.SLDPRT  12_PowerAddBatt_Mount.SLDPRT  12_PowerAddBatt_Mount_Mirrored.SLDPRT  (+103 more)
Drawings/6308-deep-groove-ball-bearing-1.snapshot.2/: Assem2.SLDASM  (+4 more)
projects/vulcan_uav/src/vrpn_client_gapter/: CMakeLists.txt  package.xml
projects/vulcan_uav/src/vrpn_client_gapter/launch/: vrpn_client_gapter.launch
projects/vulcan_uav/src/vulcan_tracker/: CMakeLists.txt  package.xml
projects/vulcan_uav/src/vulcan_tracker/src/: vulcan_tracker.cpp
(+369 files in other folders)
