<?xml version="1.0"?>
<package>
  <name>vrpn_client_gapter</name>
  <version>0.0.1</version>
  <description>The vrpn_client_gapter package</description>
  <maintainer email="ne34@nyu.edu">odroid</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
