<?xml version="1.0"?>
<package>
  <name>vulcan_tracker</name>
  <version>0.0.0</version>
  <description>The vulcan_tracker package</description>
  <maintainer email="ne34@nyu.edu">odroid</maintainer>
  <license>BSD</license>

  <url type="website">http://www.tonpairnw.org</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
